--- a/20200125.md
+++ b/20200125.md
@@ -1,19 +1,73 @@
-# 큰 제목
-## 작은 제목
+# Markdown syntax guide
 
-* 마크
-* 이이이
-* 이이이
-* 이이이
-* 이이이
-- 이이잉이
-- 이이잉
-- 이이이
+## Headers
 
-1. 이이잉
-2. 이이이ㅏ일ㅇㄹ
-   앙랑리ㅏㅣㅏㄹㅇㄹ
-   - 이이이이잉
- - 이이잉
+# This is a Heading h1
+## This is a Heading h2 
+###### This is a Heading h6
 
-3. 이이이
+## Emphasis
+
+*This text will be italic*  
+_This will also be italic_
+
+**This text will be bold**  
+__This will also be bold__
+
+_You **can** combine them_
+
+## Lists
+
+### Unordered
+
+* Item 1
+* Item 2
+* Item 2a
+* Item 2b
+
+### Ordered
+
+1. Item 1
+1. Item 2
+1. Item 3
+  1. Item 3a
+  1. Item 3b
+
+## Images
+
+![This is a alt text.](images/2022-01-25-23-24-27.png) "This is a sample image.")
+
+## Links
+
+You may be using [Markdown Live Preview](https://markdownlivepreview.com/).
+
+## Blockquotes
+
+> Markdown is a lightweight markup language with plain-text-formatting syntax, created in 2004 by John Gruber with Aaron Swartz.
+>
+>> Markdown is often used to format readme files, for writing messages in online discussion forums, and to create rich text using a plain text editor.
+
+## Tables
+
+| Left columns  | Right columns |
+| ------------- |:-------------:|
+| left foo      | right foo     |
+| left bar      | right bar     |
+| left baz      | right baz     |
+
+## Blocks of code
+
+```
+let message = 'Hello world';
+alert(message);
+```
+
+```
+$ sudo service apache2 restart
+```
+
+## Inline code
+
+This web site is using `markedjs/marked`.
+
+`dldldldldldl`
