--- a/ECO2AutocadApp_202202/20220222.md
+++ b/ECO2AutocadApp_202202/20220222.md
@@ -5,20 +5,20 @@
 ### 웹 시스템 (공단 관리)
 - 소개 사이트  
   시스템 개요, 기능 소개, 회원가입, 프로그램 다운로드 등을 위한 사이트 구축
-  ![](images/2022-02-23-23-50-10.png =400x)
+  ![](images/2022-02-23-23-50-10.png)
 - 사용자 통계  
   사용자 정보 수집(사전 동의), 전체 사용자 사용현황 통계
-  ![](images/2022-02-23-23-44-49.png =400x)
+  ![](images/2022-02-23-23-44-49.png)
 - 공통데이터관리
-  ![](images/2022-02-23-23-48-34.png =400x)
+  ![](images/2022-02-23-23-48-34.png)
 ### 사용자 프로젝트관리
 - DWG 프로젝트 목록 관리  
   사용자별 프로젝트 생성, 현황, 도면파일 관리, 열관류율 등 데이터 복사 등
-  ![](images/2022-02-24-00-00-18.png =400x)
+  ![](images/2022-02-24-00-00-18.png)
 - DWG이동, 이름변경 추적
 - 데이터수집(to 공단DB)  
   회원가입 후 프로그램 설치시 정보제공 동의, 민감정보 제외 후 데이터 수집
-  ![](images/2022-02-24-00-01-42.png =400x)
+  ![](images/2022-02-24-00-01-42.png)
 ### 부재 유형 생성
 - 벽, 바닥, 지붕, 창호 유형
 - 사용자 기존 프로젝트 유형 복사
@@ -28,7 +28,7 @@
 ### 평면작업
 - 외벽면 연속벽 자동 탐지  
   외벽선 선택시 동일 레이어선 중 외곽선 자동 탐지하여 작성하며 정보 등록
-  ![](images/2022-02-24-00-22-07.png =400x)
+  ![](images/2022-02-24-00-22-07.png)
 - 창호 위치 자동 탐지  
   레이어, 창호 부호를 참고로 창호 선 자동 작성
 - 라인 자동 그리기(벽, 창호)
