--- a/ECO2AutocadApp_202202/20220222.md
+++ b/ECO2AutocadApp_202202/20220222.md
@@ -65,3 +65,29 @@
 - 개발
 - 테스트
 - 유지관리
+
+<br>
+
+## 평면 그리기
+- 아래 방법이 적용될 수 없는 평면도 있음 (코너 창호)
+- 평면작성 편의기능 정도로 생각하여야 함
+
+<img src="images/20220228-120928.png" width="400px"/><br/>
+`코너평면`
+
+<br>
+
+### 외벽선 자동탐지 방법
+1. 외벽 선 선택  
+2. 진행방향 자동 결정
+3. 선택한 선의 동일레이어 탐지
+4. 다음 위치한 선 선택 및 데이터 저장
+
+<img src="images/20220228-120050.png" width="400px"/><br/>
+
+<img src="images/20220228-115926.png" width="400px"/><br/>
+
+
+
+
+
