--- a/ECO2AutocadApp_202202/20220222.md
+++ b/ECO2AutocadApp_202202/20220222.md
@@ -73,8 +73,8 @@
 
 <br>
 
-## 비용 및 일정
-### 비용 계산
+## 비용 계산
+### 항목
 - 웹 시스템 (공단 관리)
 - 사용자 프로젝트관리
 - 부재 유형 생성
@@ -83,9 +83,20 @@
 - 입면 생성
 - 성능 내역서, 면적 집계표
 
-### 개발 일정
+### 비용 (만원)
+- 6,000 ~ 7,000
+
+<br>
+
+## 개발 공수
+### 항목
 - 기획/분석
 - 설계
 - 개발
 - 테스트
 - 유지관리
+
+### 공수(안)
+- 기획/분석: 2.0MM
+- 설계/개발: 7.0MM
+- 테스트: 1.0MM
