--- a/방송대_2022년1학기/데이터베이스특론/20220312.md
+++ b/방송대_2022년1학기/데이터베이스특론/20220312.md
@@ -1,1 +1,9 @@
-![](images/20220312-004749.png)
+`2022.03.12`
+
+# Term Project 계획서
+## 연구 내용 고민
+- 건축 설계 과정의 정보 대상
+- 다양한 형태의 정보를 수집/ 저장하는 방법
+- 기계적 수집 방법, 수동적 수집 방법
+- 텍스트 형태, 이미지 형태
+- 수집 정보의 기계학습 활용
