--- a/방송대 2022년1학기/데이터베이스특론/20220312.md
+++ b/방송대 2022년1학기/데이터베이스특론/20220312.md
@@ -51,6 +51,27 @@
 - 
 
 ## 동기
+- 건축 설계는 00년 동안 업무 방식이 유지되었는데,
+- 기술의 발달, 인건비 상승 등의 이유로 방식의 변화가 이루어지고 있다.
+- 인간의 생활패턴 및 편의성, 공간 들의 관계, 사업의 타당성 및 수익성, 건축 법규의 검토 등이 중요한데,
+- 이는 데이터에 기반한 지능화된 설계로 변화될 수 있으며 다양한 시도가 이루어지고 있다.
+- 위의 검토 내용들은 어느정도 규칙화 될수 있으며
+- 검토 내용별로 BACK DATA가 필요하다.
+- 발주자, 설계자, 사업부지형태, 건축물 용도 별 사례 수집이 되어야 의도를 반영할 수 있다.
+- 설계 데이터를 
+
+- 설계 업무가 지능화 됨에 따라 사례를 기반으로한 의도룰 파악하여야 하며 그에 필요한 BACK 데이터 수집이 필수이고, 올바른 결과물 생산을 위한 데이터베이스 구축, 관계성 연구 및 그에 
+
+- 설계 업무의 자동화, 지능화 필요
+- 설계 의도 분석을 위한 사례 수집 필요
+- 설계 의도: 인간의 생활패턴 및 편의성, 공간 들의 관계, 사업의 타당성 및 수익성, 건축 법규의 검토
+- 사용된 마감자재, 공간관계 등
+
+- 설계의 자동화 요구가 있으나 자동화 하려면 사례의 분석이 필요하다.
+- 결과물인 2D도면, 텍스트정보 만으로 의도를 분석하기는 어렵다.
+- 다양한 결과물 간의 관계성을 구축하고 인사이트를 도출하여야 한다.
+- 이를 위한 유형별 데이터의 저장 방식 연구는 시장의 요구라 할 수 있다.
+
 
 - 인공지능 설계기법을 위한 데이터 고도화? 인공지능까지 가면 연구의 내용이 달라짐
 - 데이터베이스의 관점에서 접근할 필요.
@@ -105,4 +126,4 @@
 
 
 ## 예상결과
-지능화된 건축설계 방식 적용을 위한 평면도, 단면도, 창호도, 일람표 등 유형별 데이터의 체계적 저장 기법 제안
+지능화된 건축설계 방식 적용을 위한 평면도, 단면도, 창호도, 일람표 등 유형별 데이터의 체계적 저장 기법 
