--- a/방송대 2022년1학기/정보보호이론/2022-03-30.md
+++ b/방송대 2022년1학기/정보보호이론/2022-03-30.md
@@ -1,10 +1,35 @@
-$$
-f(x) = \int_{-\infty}^\infty \hat f(\xi)\,e^{2 \pi \xi x} \,d\xi
-$$
+`2022.03.30`
 
-$a + b = c$
+<br>
+
+$k=\begin{bmatrix}1 & 3\\3 & 10\end{bmatrix}$
+<br>
+<br>
 
 $K, N =>$ $\begin{bmatrix}10 & 13\end{bmatrix}$ $\begin{bmatrix}1 & 3\\3 & 10\end{bmatrix}$ $= \begin{bmatrix}10 * 1 + 13 * 3 & 10 * 3 + 13 * 10\end{bmatrix} mod 26$ $= \begin{bmatrix}23 & 4\end{bmatrix}$ $=>X, E$
 <br>
 
 $O, U =>$ $\begin{bmatrix}14 & 20\end{bmatrix}$ $\begin{bmatrix}1 & 3\\3 & 10\end{bmatrix}$ $= \begin{bmatrix}14 * 1 + 20 * 3 & 14 * 3 + 20 * 10\end{bmatrix} mod 26$ $= \begin{bmatrix}22 & 8\end{bmatrix}$ $=>W, I$
+<br>
+<br>
+<br>
+
+$k^{-1}=\begin{bmatrix}10 & 23\\23 & 1\end{bmatrix}$
+<br>
+<br>
+
+$X, E =>$ 
+$\begin{bmatrix}23 & 4\end{bmatrix}$ 
+$\begin{bmatrix}10 & 23\\23 & 1\end{bmatrix}$ 
+$= \begin{bmatrix}23 * 10 + 4 * 23 & 23 * 23 + 4 * 1\end{bmatrix} mod 26$ 
+$= \begin{bmatrix}10 & 13\end{bmatrix}$ 
+$=>K, N$
+<br>
+
+$W, I =>$ 
+$\begin{bmatrix}22 & 8\end{bmatrix}$ 
+$\begin{bmatrix}10 & 23\\23 & 1\end{bmatrix}$ 
+$= \begin{bmatrix}22 * 10 + 8 * 23 & 22 * 23 + 8 * 1\end{bmatrix} mod 26$ 
+$= \begin{bmatrix}14 & 20\end{bmatrix}$ 
+$=>O, U$
+<br>
